--- a/demo/templates/dbs.html
+++ b/demo/templates/dbs.html
@@ -82,6 +82,9 @@ mix-blend-mode: multiply;
   <div class="page-header">
     <h2 id="userImages">Try Diverse Beam Search On Your Images</h2>
   </div>
+  {% block url_content %}
+  {% include 'upload_image_url.html' %}
+  {% endblock %}
 
   <form id="my-dropzone" method="post" class="dropzone
   " action="{% url "upload" %}" enctype="multipart/form-data">
@@ -212,6 +215,41 @@ function submitImageForCaptioning () {
     console.log("Ajax call completed successfully");
   });
 }
+
+function submitImageUsingUrl(){
+  var src = document.getElementById("image_url").value;
+  $('#comments').prepend('<br>');
+  $('#comments').prepend('<li>' + "Starting the Image Download process." + '</li>');
+
+  scrollToElement($("#termstart"));
+  scrollToElement($("#resultHeading"));
+
+  $.ajax({
+    type : "POST",
+    url  : '{% url 'upload-url' %}',
+    data : {'src': src  , 'socketid': "{{socketid}}", 'csrfmiddlewaretoken': '{{ csrf_token }}', type:"dba"}
+  }).done(function(data){
+    console.log(data);
+    $("#inputImageAfterUpload").attr('src', data["file_path"]);
+    $("#label").val("");
+    $("#show-grad-cam-result").hide();
+    $("#ResultDiv").show();
+
+  });
+};
+
+$("#image_url").keydown(function(e){
+  if (e.which === 13){
+    $("#image_url_submit_btn").click();
+  }
+});
+
+$('#image_url').on('paste', function(){
+  setTimeout(function(){
+    $("#image_url_submit_btn").click();
+  }, 0);
+});
+
 </script>
 <br>
   <div class="page-header">
