--- a/demo/templates/dbs.html
+++ b/demo/templates/dbs.html
@@ -86,6 +86,10 @@ mix-blend-mode: multiply;
   {% include 'upload_image_url.html' %}
   {% endblock %}
 
+  <div class="col-sm-12">
+    <h3 align="center">OR</h3>
+  </div>
+
   <form id="my-dropzone" method="post" class="dropzone
   " action="{% url "upload" %}" enctype="multipart/form-data">
   <input type="hidden" id="appType" name="type" value="dbs">
